# resoundnv

docs/: Resound_Development_Workshop_04-06.01.2010.txt  example1.xml  nvdoc.txt  parameter-summing-algorithm.pd  phasor-chase-algorithm-looping.pd  phasor-chase-algorithm.pd  resoundnvcompilationguide.txt  testfile
src/: CMakeLists.txt  README  behaviour.cpp  core.cpp  dsp.cpp  jackengine.cpp  ladspahost.cpp  oscmanager.cpp  resoundnv_cal.cpp  resoundnvcompilationguide.txt  rs_metering.pd  rs_oscmeter.pd  stereo_rig.xml  test24.xml  test8-out.xml  test8.pd  test8.xml  testdisk.xml  testladspa.xml  xmlhelpers.cpp
src/pd_utils/: test24.pd
src/pd_utils/basic_surface/: bs_fader.pd  bs_main.pd
src/python_utils/: resoundxml_utils.py  roommonitor.py  roomschematic.py  roomschematic_example.xml  trilat.py
src/resoundnv/: behaviour.hpp  core.hpp  dsp.hpp  jackengine.hpp  ladspahost.hpp  math3d.hpp  oscmanager.hpp  resound_exception.hpp  resound_types.hpp  xmlhelpers.hpp
